src/app/globals.css
@import "tailwindcss";
body {
    height: 100%;
    width: 100%;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
        sans-serif;
    overflow-x: hidden;
}
.burger {
    > * {
        border-top: 3px solid black;
    }
}
button:hover {
    filter: brightness(90%);
}
button:focus {
    filter: brightness(105%);
}
#root {
    height: 100%;
    width: 100%;
    position: relative;
}
input {
    border: 1px solid gray;
    padding: 0.5rem 0.75rem;
}
.map {
    z-index: 0;
    margin-top: 2.5rem;
    border: 1px solid black;
    aspect-ratio: 1/1;
    width: 100%;
}
.mapmain {
    height: 80vh;
}
aside {
    z-index: 1;
    border-left: 1px solid black;
}

.graph {
    width: 100%;
}

.loader {
    width: 50px;
    aspect-ratio: 1;
    border-radius: 50%;
    border: 8px solid;
    border-color: #000 #0000;
    animation: l1 1s infinite;
}
@keyframes l1 {
    to {
        transform: rotate(0.5turn);
    }
}
@media screen and (width<1500px) {
    aside {
        border-left: none;
        height: max-content;
        width: 100%;
        ul {
            flex-direction: row;
            justify-content: center;
        }
        li:first-of-type {
            margin-right: auto;
        }
        li {
            margin: 0;
        }
    }
    .mapmain {
        margin-top: 2.5rem;
    }
}
@media screen and (width<1000px) {
    :root {
        font-size: 0.9rem;
    }
    .graph {
        height: 300px;
    }
    .map {
        aspect-ratio: 3/4;
    }
}

